--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+# Maven specific files
+
 target/
+test/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -10,3 +13,19 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+# IntelliJ files
+
+.idea
+*.iml
+.classpath
+.settings
+.project
+
+# Vs code
+
+.vscode
+
+# System files
+
+.DS_Store
